--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +12,32 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 6px;
+  flex: 1 1 50;
+}
+
+.left-links
+{
+  display: flex;
+  justify-content: flex-start;
+  flex: 1 1 50;
+}
+
+.right-links
+{
+  display: flex;
+  justify-content: flex-end;
+  flex: 1 1 50;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  flex: auto;
+  margin: 6px;
+  padding: 0;
 }
 
 a {
