--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +23,13 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+}
+
+.right-container{
+  display: flex;
+  justify-content: flex-end;
+  flex: auto;
+  gap: 16px;
 }
 
 .logo {
@@ -41,8 +51,11 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 0px 5px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
