--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 }
 
 img {
@@ -10,6 +14,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container
+{
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+  flex: 1 1 200px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 /* do not edit this footer */
