--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -8,6 +8,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  width: 100%;
+  display: grid;
+  gap: 15px;
+  grid: 1fr 1fr 5fr 1fr / 1fr 3fr;
+
 }
 
 .container div {
