--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,10 +1,17 @@
-* {
+body, html {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
 
 .container {
   text-align: center;
+  height: 100%;
+  width: 100vw;
+  display: grid;
+  grid: 1fr 50px 6fr 0.5fr / 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +24,20 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1.5fr 3.5fr;
+}
+
+.header .logo {
+  justify-self: start;
+}
+
+.header .menu ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
 }
 
 .menu ul,
@@ -26,6 +47,11 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2 / 1 / 4 / 2;
+  display: grid;
+  gap: 50px;
+  grid-template-rows: repeat(4, 1fr);
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -34,6 +60,7 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  padding: 13% 0px;
 }
 
 
@@ -42,10 +69,23 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  padding: 13% 0px;
 }
 
 .nav {
   background-color: #FF7755;
+  grid-area: 2 / 2 / 3 / 3;
+  padding: 0; margin: 0;
+}
+
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  align-items: center;
 }
 
 .nav ul li {
@@ -55,6 +95,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 4 / 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +112,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +128,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .footer p {
