--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -19,6 +19,26 @@
   background-color: rgb(99, 97, 97);
 
   display: none;
+  animation: 1.5s ease-in;
+  animation-name: drop-down;
+  transform-origin: top;
+}
+
+@keyframes drop-down 
+{
+  from
+  {
+    transform: scaleY(0)
+  }
+
+  80% {
+    transform: scaleY(1.1);
+  }
+
+  to
+  {
+    transform: scaleY(1)
+  }
 }
 
 ul.dropdown-menu li:hover {
